syntax = "proto3";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message CreateUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UpdateUserPayload {
    string name = 2;
    string email = 3;
}

message UpdateUserRequest {
    string id = 1;
    UpdateUserPayload payload = 2;
}

message UpdateUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

service UserService {
    rpc getUser (GetUserRequest) returns (GetUserResponse) {}
    rpc updateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc createUser (CreateUserRequest) returns (CreateUserResponse) {}
}